--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon Social Solution Services</title>
   </head>
 
   <body>
     <div class="header">
-      <h1>Hori<span class="seo">seo</span>n</h1>
+      <h1>Hori<span class="seo" alt="Horiseon logo">seo</span>n</h1>
       <div>
         <ul>
           <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <a href="#search-engine-optimization" alt="SEO diagram on sketchpad">Search Engine Optimization</a>
           </li>
           <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+            <a href="#online-reputation-management">Online Reputation Management</a>
           </li>
           <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
+            <a href="#social-media-marketing" alt="">Social Media Marketing</a>
           </li>
         </ul>
       </div>
