--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <a href="#search-engine-optimization" alt="SEO diagram on sketchpad">Search Engine Optimization</a>
           </li>
           <li>
-            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#online-reputation-management" alt="online reputation graph and charts on laptop">Online Reputation Management</a>
           </li>
           <li>
-            <a href="#social-media-marketing" alt="">Social Media Marketing</a>
+            <a href="#social-media-marketing" alt="social media icons on table">Social Media Marketing</a>
           </li>
         </ul>
       </div>
@@ -72,13 +72,13 @@
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand">
+      <div class="benefit-brand" alt="brand awareness icon">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" />
         <p>
@@ -88,7 +88,7 @@
       </div>
       <div class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png" alt="cost management icon"/>
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
