--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <div>
         <ul>
           <li>
-            <a href="#search-engine-optimization" alt="SEO diagram on sketchpad">Search Engine Optimization</a>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
           <li>
-            <a href="#online-reputation-management" alt="online reputation graph and charts on laptop">Online Reputation Management</a>
+            <a href="#online-reputation-management">Online Reputation Management</a>
           </li>
           <li>
-            <a href="#social-media-marketing" alt="social media icons on table">Social Media Marketing</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
       </div>
@@ -28,6 +28,7 @@
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
+          alt="SEO diagram on sketchpad"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -44,6 +45,7 @@
       >
         <img
           src="./assets/images/online-reputation-management.jpg"
+          alt="online reputation graph and charts on laptop"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -58,6 +60,7 @@
       <div id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
+          alt="social media icons on table"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
