--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand" alt="brand awareness icon">
+      <div class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" alt="brand awareness icon"/>
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
