--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Hori<span class="seo" alt="Horiseon logo">seo</span>n</h1>
       <div>
         <ul>
@@ -22,7 +22,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </header>
     <div class="hero"></div>
     <div class="content">
       <div class="search-engine-optimization">
