--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <div class="hero"></div>
-    <div class="content">
+    <section class="content">
       <div class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -71,7 +71,7 @@
           your lead generation.
         </p>
       </div>
-    </div>
+    </section>
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
@@ -98,9 +98,9 @@
         </p>
       </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
