--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <div class="hero"></div>
     <section class="content">
-      <div class="search-engine-optimization">
+      <figure class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="SEO diagram on sketchpad"
@@ -38,11 +38,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
+      </figure>
+      <figure id="online-reputation-management" class="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           alt="online reputation graph and charts on laptop"
@@ -56,8 +53,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      </figure>
+      <figure id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           alt="social media icons on table"
@@ -70,9 +67,9 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
+      </figure>
     </section>
-    <div class="benefits">
+    <section class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
@@ -97,7 +94,7 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
+    </section>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
