--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </p>
       </figure>
     </section>
-    <section class="benefits">
+    <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
@@ -94,7 +94,7 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </section>
+    </aside>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
