html file contains comments to organize code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <!--Head-->
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon Social Solution Services</title>
   </head>
 
+  <!--Body-->
   <body>
+    <!--Header -->
     <header class="header">
       <h1>Hori<span class="seo" alt="Horiseon logo">seo</span>n</h1>
       <div>
@@ -23,8 +26,13 @@
         </ul>
       </div>
     </header>
+
+    <!-- Background Image -->
     <div class="hero"></div>
+
+    <!-- Content -->
     <section class="content">
+      <!-- SEO -->
       <figure class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -39,6 +47,8 @@
           visibility and find the right customers for your business.
         </p>
       </figure>
+
+      <!-- Online Reputation -->
       <figure id="online-reputation-management" class="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
@@ -54,6 +64,8 @@
           business.
         </p>
       </figure>
+
+      <!-- Social Media -->
       <figure id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
@@ -69,7 +81,10 @@
         </p>
       </figure>
     </section>
+
+    <!-- Benefits  -->
     <aside class="benefits">
+      <!-- Lead -->
       <figure class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
@@ -78,6 +93,8 @@
           business, bringing customers directly to your website.
         </p>
       </figure>
+
+      <!-- Brand -->
       <figure class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="brand awareness icon"/>
@@ -86,6 +103,8 @@
           the search ranking and visibility for your business.
         </p>
       </figure>
+
+      <!-- Cost -->
       <figure class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="cost management icon"/>
@@ -95,6 +114,8 @@
         </p>
       </figure>
     </aside>
+
+    <!-- Footer -->
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
