--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Horiseon Social Solution Services</title>
   </head>
 
-  <!--Body-->
+  <!-- Body -->
   <body>
-    <!--Header -->
+    <!-- Header -->
     <header class="header">
       <h1>Hori<span class="seo" alt="Horiseon logo">seo</span>n</h1>
+      <!-- Navbar -->
       <nav>
         <ul>
           <li>
@@ -29,7 +30,7 @@
     </header>
 
     <!-- Background Image -->
-    <div class="hero"></div>
+    <figure class="hero"></figure>
 
     <!-- Content -->
     <section class="content">
@@ -41,12 +42,12 @@
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
-        <p>
+        <figcaption>
           The dominance of mobile internet use means that users are searching
           for the right business as they travel, shop, or sit on their couch at
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
-        </p>
+        </figcaption>
       </figure>
 
       <!-- Online Reputation -->
@@ -57,13 +58,13 @@
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
-        <p>
+        <figcaption>
           The web is full of opinions, and some of these can be negative. Social
           media allows anyone with an internet connection to say whatever they
           want about your business. Online Reputation Management gives you the
           control over what potential customers see when they search for your
           business.
-        </p>
+        </figcaption>
       </figure>
 
       <!-- Social Media -->
@@ -74,12 +75,12 @@
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
-        <p>
+        <figcaption>
           Social media continues to have a sizable influence on buying habits.
           Social media marketing helps you determine which platforms are suited
           to your brand, using analytics to find the right markets and increase
           your lead generation.
-        </p>
+        </figcaption>
       </figure>
     </section>
 
@@ -89,30 +90,30 @@
       <figure class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
-        <p>
+        <figcaption>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
-        </p>
+        </figcaption>
       </figure>
 
       <!-- Brand -->
       <figure class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="brand awareness icon"/>
-        <p>
+        <figcaption>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
-        </p>
+        </figcaption>
       </figure>
 
       <!-- Cost -->
       <figure class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="cost management icon"/>
-        <p>
+        <figcaption>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
-        </p>
+        </figcaption>
       </figure>
     </aside>
 
