Sidebar comment updated

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </figure>
     </section>
 
-    <!-- Benefits  -->
+    <!-- Benefits Sidebar  -->
     <aside class="benefits">
       <!-- Lead -->
       <figure class="benefit-lead">
